# Django-framework

./: README.md  class.py
django-polling/django_polls/: LICENSE  admin.py  apps.py  forms.py  models.py  pyproject.toml  tests.py  urls.py  views.py
django-polling/django_polls/django_polling.egg-info/: PKG-INFO  SOURCES.txt
django-polling/django_polls/migrations/: 0001_initial.py  0002_alter_choice_question.py  0004_poll.py
django-polling/django_polls/static/polls/css/: admin_custom.css  home.css  register.css  style.css
django-polling/django_polls/templates/admin/: base_site.html
django-polling/django_polls/templates/polls/: T&c.html  base.html  choice.html  details.html  home.html  index.html  poll.html  register.html  result.html  update_poll.html
djangotutorial/: db.sqlite3  manage.py
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/polls/: admin.py  forms.py  models.py  urls.py  views.py
djangotutorial/polls/migrations/: 0003_grade.py
djangotutorial/polls/templates/polls/: choice.html  details.html  index.html  result.html
