[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polling"
version = "0.1.0"
dependencies = [
    "django>=4.2",
]
description = "A Django app to conduct web-based polls."
readme = "README.rst"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.12"
authors = [
    {name = "Maryam Giwa", email = "maryamqg2@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://www.example.com/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["django_polls*"]

[tool.setuptools.package-data]
"django_polls" = [
    "templates/**/*.html",
    "static/**/*",
]